--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -2,6 +2,6 @@ footer{
     background-color: #333;
     color: #fff;
     text-align: center;
-    padding: 10px;
+    padding: 10px 0;
     width: 100%;
 }
