--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -11,9 +11,38 @@ header{
   }
   a{
     display: flex;
-    background: #020638;
+    background: #3ba3ff;
+    align-items: center;
     color: white;
-    padding: 12px 16px;
+    padding: 0 16px;
+    height: 43px;
     text-decoration: none;
+    position: relative;
+    &:hover{
+      .dropdown{
+        display: flex;
+      }
+    }
+    .dropdown{
+      flex-direction: column;
+      gap: 3px;
+      position: absolute;
+      top: 40px;
+      left: 0;
+      z-index: 1;
+      display: none;
+      padding-top: 10px;
+        .dropdownLink{
+          display: flex;
+          width: 100%;
+          height: 35px;
+          justify-content: center;
+          align-items: center;
+          color: #3ba3ff;
+          background: white;
+          border: 1px solid #3ba3ff;
+          border-radius: 5px;
+        }
+    }
   }
 }
